# CQT-experiments

./: .gitignore  .vscode  CONTRIBUTING.md  Makefile  README.md  current_run_id.json  download.py  input.json  pyproject.toml  run_sinq20.sh  set_best_run.py  slurm_gpu.out  upload.py  upload_experiment.py  utils.py
clientdb/: client.py
data/process_tomography/: process_tomography_data.json
data/universal_approximant/: results.json
data_tmp/reuploading/: results_reuploading.json
data_tmp/universal_approximant/: results.json
logs/: slurm_sinq20.out
scripts/: config.py  diocan.py  experiment_list.ini  experiment_list.txt  real_runscripts_numpy.sh  real_runscripts_sinq20.sh  run_sinq20.sh  runscripts.py  runscripts_numpy.sh  runscripts_sinq20.sh  scripts_executor.py  uploader.py
scripts/GHZ/: main.py
scripts/QFT/: main.py
scripts/amplitude_encoding/: main.py
scripts/bell_tomography/: main.py
scripts/coherence/: main.py
scripts/ghz/: main.py
scripts/grover2q/: main.py
scripts/grover3q/: main.py
scripts/mermin/: main.py
scripts/process_tomography/: main.py  process_tomography.py
scripts/qft/: main.py
scripts/qft3_swap/: main.py
scripts/qml-statlog_class_3q/: main.py
scripts/qml-yeast_class_3q/: main.py
scripts/qml_3Q_statlog/: input.json  main.py  pre_executor.py
scripts/qml_3Q_yeast/: input.json  main.py
scripts/qml_3q_statlog/: input.json  main.py  results_tmp.json
scripts/qml_3q_yeast/: input.json  main.py
scripts/qml_4Q_statlog/: input.json
src/: fillers.py  main.py  plots.py
tomography_now_report/: index.html  meta.json
(+381 files in other folders)
