[project]
name = "cqt-experiment"
version = "0.1.0"
description = "A project to run experiments on the NQCH quantum computer"
authors = [
    {name = "CQT", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.0.0",
    "numpy>=1.20.0",
    "jinja2>=3.0.0",
    "numpy",
    "matplotlib",
    "networkx",
    "aiohttp",
    "jwt",
    "pyjwt",
    "requests",
    "dynaconf",
    "sympy",
    "qibo",
    "qibo_client",
    "qibocal",
    "GitPython",
    "torch",
    "torchvision",
    "qiboml",
    "tabulate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
